fast_forward_derive/tests/ui/fail_unnamed_struct.rs
use fast_forward_derive::Indexed;

#[derive(Indexed)]
pub struct Car(#[index(fast_forward::index::uint::UIntIndex)] i32, String);

fn main() {}
